compiler-core/main/build/config/snapshots/gleam_core__build__config__deny_extra_deps_properties.snap
---
source: compiler-core/src_refactored/build/config/mod.rs
assertion_line: 362
expression: error.pretty_string()
snapshot_kind: text
---
error: File IO failure

An error occurred while trying to parse this file:

    gleam.toml

The error message from the file IO library was:

    TOML parse error at line 6, column 18
  |
6 | aide_generator = { git = "git@github.com:crowdhailer/aide.git", ref = "f559c5bc", extra = "idk what this is" }
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
data did not match any variant of untagged enum Requirement
