compiler-core/main/build/config/snapshots/gleam_core__build__config__name_with_dash.snap
---
source: compiler-core/src_refactored/build/config/mod.rs
assertion_line: 1114
expression: "toml::from_str::<PackageConfig>(input).unwrap_err().to_string()"
snapshot_kind: text
---
TOML parse error at line 2, column 8
  |
2 | name = "one-two"
  |        ^^^^^^^^^
Package names may only contain lowercase letters, numbers, and underscores
